zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/struct_field_queries_hasfield_of_itself.zig
const Foo = packed struct {
    bar: (T: {
        _ = @hasField(Foo, "bar");
        break :T void;
    }),
};

comptime {
    _ = @as(Foo, undefined);
}

// error
//
// :3:23: error: type 'tmp.Foo' depends on itself for field query here
